--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
         <!-- SNS Link -->
         <!-- {% include sns-links.html center=true %} -->
         <p class="copyright">
-          &copy; <a href="https://github.com/AliceGame1" target="_blank">Ciel</a> 2025
+          &copy; <a href="https://github.com/AliceGame1" target="_blank">Alice Lab</a> 2025
           <br>
           Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>
         </p>
